# asusctl

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
asus-nb-ctrl/src/: ctrl_leds.rs  main.rs
asusctl/: Cargo.toml
asusctl/examples/: animatrix.rs
asusctl/src/: anime_cli.rs  aura_cli.rs  cli_opts.rs  fan_curve_cli.rs  main.rs  slash_cli.rs
asusd/: Cargo.toml
asusd-user/: Cargo.toml
asusd-user/src/: config.rs  ctrl_anime.rs  zbus_anime.rs
asusd/src/: config.rs  ctrl_fancurves.rs  ctrl_platform.rs  daemon.rs  error.rs
asusd/src/ctrl_anime/: config.rs  mod.rs
asusd/src/ctrl_aura/: config.rs  controller.rs  manager.rs  trait_impls.rs
config-traits/: Cargo.toml
config-traits/src/: lib.rs
daemon/src/: config.rs  ctrl_fan_cpu.rs  ctrl_supported.rs  daemon.rs
data/: asusd.service
data/completions/: asusctl.bash  asusctl.fish
rog-anime/: Cargo.toml
rog-anime/src/: data.rs  gif.rs  image.rs  sequencer.rs  usb.rs
rog-aura/: Cargo.toml
rog-aura/src/: aura_detection.rs  builtin_modes.rs  error.rs  lib.rs  usb.rs
rog-control-center/: Cargo.toml
rog-control-center/locales/: en.ron
rog-control-center/src/: app.rs  config.rs  lib.rs  main.rs  mocking.rs  notify.rs  page_states.rs  system_state.rs
rog-dbus/src/: zbus_anime.rs  zbus_profile.rs
rog-platform/: Cargo.toml
rog-platform/src/: cpu.rs  lib.rs  platform.rs  supported.rs
rog-profiles/: Cargo.toml
rog-profiles/src/: fan_curve_set.rs  lib.rs
rog-slash/: Cargo.toml
rog-slash/src/: data.rs  usb.rs
rog-types/src/: anime_matrix.rs  cli_options.rs
(+34 files in other folders)
