[package]
name = "config-traits"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
nanoserde.workspace = true

log.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
